# hatch-requirements-txt

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
hatch_requirements_txt/: __init__.py
tests/: conftest.py  requirements.txt  test_errors.py  test_metadata.py
tests/test_metadata_/: test_parse_requirements_b_.yml  test_parse_requirements_c_.yml  test_parse_requirements_set_b__.yml  test_parse_requirements_tuple_a__.yml
