[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "hatch-requirements-txt"
version = "0.3.0"
description = "Hatchling plugin to read project dependencies from requirements.txt"
readme = "README.rst"
requires-python = ">=3.6.1"
keywords = [ "dependencies", "hatch", "requirements",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Hatch",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
dependencies = [ "hatchling>=0.21.0", "packaging>=21.3",]
dynamic = []

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/hatch-requirements-txt"
"Issue Tracker" = "https://github.com/repo-helper/hatch-requirements-txt/issues"
"Source Code" = "https://github.com/repo-helper/hatch-requirements-txt"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Hatch",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "hatch_requirements_txt"

[tool.mypy]
python_version = "3.7"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[project.entry-points.hatch]
requirements_txt = "hatch_requirements_txt"

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.hatch.build]
exclude = [
    "/*",
    "!/hatch_requirements_txt",
    "!/hatch_requirements_txt/**/requirements.txt",
    "!/requirements.txt",
    "tests",
    "doc-source",
]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.hatch.build.sdist]
include = [ "hatch_requirements_txt", "requirements.txt",]

[tool.hatch.build.wheel]
include = [ "hatch_requirements_txt",]
