[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "hatch-requirements-txt"
version = "0.4.1"
description = "Hatchling plugin to read project dependencies from requirements.txt"
readme = "README.rst"
requires-python = ">=3.7"
keywords = [ "dependencies", "hatch", "requirements",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Hatch",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
dependencies = [ "hatchling>=0.21.0", "packaging>=21.3",]
dynamic = []

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/repo-helper/hatch-requirements-txt"
"Issue Tracker" = "https://github.com/repo-helper/hatch-requirements-txt/issues"
"Source Code" = "https://github.com/repo-helper/hatch-requirements-txt"

[project.entry-points.hatch]
requirements_txt = "hatch_requirements_txt"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Hatch",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "hatch_requirements_txt"

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.hatch.build]
exclude = [
    "/*",
    "!/hatch_requirements_txt",
    "!/hatch_requirements_txt/**/requirements.txt",
    "!/requirements.txt",
    "tests",
    "doc-source",
]

[tool.hatch.build.sdist]
include = [ "hatch_requirements_txt", "requirements.txt",]

[tool.hatch.build.wheel]
include = [ "hatch_requirements_txt",]
